fix(InfoBlock): remove horizontal scroll

--- a/src/components/InfoBlock/InfoBlock.css
+++ b/src/components/InfoBlock/InfoBlock.css
@@ -26,7 +26,7 @@
 .info-block .info-block-text h2 {
     color: var(--yglf-green);
     font-size: var(--cell);
-    line-height: var(--cell);;
+    line-height: var(--cell);
     font-weight: 400;
     letter-spacing: 4.55px;
     -webkit-font-smoothing: antialiased;
@@ -35,7 +35,7 @@
 .info-block .info-block-text p {
     padding-left: 240px;
     margin: 0;
-    width: 570px;
+    width: 450px;
     font-size: 15px !important;
     font-weight: 100;
     font-family: "sofia-pro";
